# ai-for-world-peace

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  sample.env  sunny.tech.ipynb
src/world_peace/: __main__.py  config.py  data.py  model.py  server.py  stats.py
tests/: test_statistics.py
